tests/tests/snapshots/integration__run_images@pulled_regular_polygon1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/pulled_regular_polygon1.gleam
---
<svg width="81.0" height="77.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 40.45085 0.0 C 47.223015 15.210532 64.34291 27.648864 80.901699 29.389263 C 68.528338 40.530287 61.98912 60.655931 65.45085 76.942088 C 51.031527 68.617088 29.870173 68.617088 15.45085 76.942088 C 18.912579 60.655931 12.373361 40.530287 0.0 29.389263 C 16.55879 27.648864 33.678685 15.210532 40.45085 0.0 Z" fill="rgba(0, 128, 0, 1.0)" />
</svg>
