tests/tests/snapshots/integration__run_images@pulled_regular_polygon2.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/pulled_regular_polygon2.gleam
---
<svg width="100.0" height="87.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 25.5 86.5 C 31.5 62.5 24.5 49.5 0.5 43.5 C 24.5 36.5 31.5 24.5 25.5 0.5 C 42.5 17.5 57.5 17.5 75.5 0.5 C 68.5 24.5 75.5 36.5 100.5 43.5 C 75.5 49.5 68.5 62.5 75.5 86.5 C 57.5 68.5 42.5 68.5 25.5 86.5 Z" fill="none" stroke="rgba(255, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
</svg>
