tests/tests/snapshots/integration__run_images@pulled_regular_polygon3.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/pulled_regular_polygon3.gleam
---
<svg width="50.0" height="50.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 50.0 C 0.0 50.0 0.0 0.0 0.0 0.0 C 0.0 0.0 50.0 0.0 50.0 0.0 C 50.0 0.0 50.0 50.0 50.0 50.0 C 50.0 50.0 0.0 50.0 0.0 50.0 Z" fill="rgba(255, 165, 0, 1.0)" />
</svg>
