tests/tests/snapshots/integration__run_images@radial_star1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/radial_star1.gleam
---
<svg width="119.0" height="119.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 34.63655 118.25658 L 53.471436 64.785144 L 0.0 83.62003 L 51.12829 59.12829 L 0.0 34.63655 L 53.471436 53.471436 L 34.63655 0.0 L 59.12829 51.12829 L 83.62003 0.0 L 64.785144 53.471436 L 118.25658 34.63655 L 67.12829 59.12829 L 118.25658 83.62003 L 64.785144 64.785144 L 83.62003 118.25658 L 59.12829 67.12829 Z" fill="rgba(47, 79, 79, 1.0)" />
</svg>
